# Gerenciador-de-Despesas

./: CMakeLists.txt  Categoria.cs  Despesa.cs  Gerenciador.csproj  Gerenciador.sln  GerenciadorDeDespesas.cs  Program.cs  README.md  despesas.json  executar.bat  executar.ps1
